# docs/openapi.json
@@ -931,6 +931,10 @@
           },
           "status": {
             "$ref": "#/components/schemas/LoanStatus"
+          },
+          "late_fee_cents": {
+            "type": "integer",
+            "title": "Late Fee Cents"
           }
         },
         "type": "object",
@@ -941,7 +945,8 @@
           "loan_timestamp",
           "due_at_timestamp",
           "returned_timestamp",
-          "status"
+          "status",
+          "late_fee_cents"
         ],
         "title": "BookLoanResponse"
       },
@@ -1058,6 +1063,10 @@
           "available_copies": {
             "type": "integer",
             "title": "Available Copies"
+          },
+          "late_fee_cents_per_day": {
+            "type": "integer",
+            "title": "Late Fee Cents Per Day"
           }
         },
         "type": "object",
@@ -1069,7 +1078,8 @@
           "isbn",
           "loan_duration_days",
           "total_copies",
-          "available_copies"
+          "available_copies",
+          "late_fee_cents_per_day"
         ],
         "title": "BookResponse"
       },
